Fixed broken onclick event in IE8, closes #858

--- a/phpmyfaq/admin/assets/less/style.less
+++ b/phpmyfaq/admin/assets/less/style.less
@@ -92,6 +92,12 @@ section {
   }
 }
 
+// Categories
+h4.category-header {
+  cursor: pointer;
+  color: @linkColor;
+}
+
 // Add / edit FAQs
 textarea.admin-question {
   #font > .shorthand(24px, normal, 30px);
